# imagenie

./: .pre-commit-config.yaml  LICENSE  README.md  cliff.toml  deny.toml  package-lock.json  package.json  vite.config.ts  wrangler.toml
.github/workflows/: build.yml  check.yml  release.yml
scripts/: dist.js
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  processor.rs  utils.rs
src-tauri/src/commands/: background_removal.rs  download.rs  face_restoration.rs  image.rs  mod.rs  upscaling.rs
src-tauri/src/image/: error.rs  mod.rs  model.rs  processor.rs  tensor.rs  types.rs
src/assets/: styles.css
src/components/: FileSelection.vue  FunctionSettings.vue  Header.vue  ImageProcessor.vue  InitializationScreen.vue  MainContent.vue  MainLayout.vue  ProcessingControl.vue  Sidebar.vue
src/config/: models.ts
src/helpers/: tauriNotification.ts
src/i18n/: index.ts
src/router/: index.ts
src/store/: index.js  index.ts
src/utils/: githubRelease.ts
src/views/: CompressView.vue  RemoveBackgroundView.vue  RemoveBgView.vue  RepairView.vue  ResizingView.vue  RestorationView.vue  UpscalingView.vue
