[package]
name = "imagenie"
version = "0.1.0"
description = "A Tauri App"
authors = ["zhongwei"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "imagenie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
anyhow = "1.0.91"
dirs = "5.0.1"
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = "2"
tauri-plugin-log = { version = "2.0.1", features = ["colored"] }
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2.0.1"
tracing = { version = "0.1.40", features = ["log"] }
ort = { version = "2.0.0-rc.8" }
image = "0.25.4"
ndarray = "0.16.1"
half = "2.3"
thiserror = "2.0.0"
rayon = "1.10.0"
num-traits = "0.2"
tokio = "1.41.1"

[package.metadata.cargo-machete]
ignored = ["serde_json", "serde", "num-traits", "tauri-plugin-http", "tauri-plugin-shell"]
